добавлен вариант с большими значками

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 	display:block;	
 }
 
+.block-social-media__big i {
+	height: 100px;
+	width: 100px;
+}
+
 .block-social-media__small i {
 	height: 30px;
 	width: 30px;
@@ -86,6 +91,10 @@
 
 .block-social-media__rounded_corners i {
 	border-radius: 15px;	
+}
+
+.block-social-media__rounded_corners + .block-social-media__small  i {
+	border-radius: 30px;	
 }
 
 .block-social-media__rounded_corners + .block-social-media__small  i {
@@ -108,6 +117,19 @@
 </style>
 
 <h2>Квадраты:</h2>
+
+
+<div class="block-social-media block-social-media__big">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
 
 <div class="block-social-media">
 	<ul>
@@ -136,6 +158,18 @@
 
 <h2>Квадраты со скруглёнными углами:</h2>
 
+<div class="block-social-media block-social-media__rounded_corners block-social-media__big">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
+
 <div class="block-social-media block-social-media__rounded_corners">
 	<ul>
 		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
@@ -161,6 +195,18 @@
 </div>
 
 <h2>Круги:</h2>
+
+<div class="block-social-media block-social-media__circle block-social-media__big">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
 
 <div class="block-social-media block-social-media__circle">
 	<ul>
