большие кнопки, названия селекторов

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style>
 /*----------------------------------------------------
-	Описываем поведение блока, который содержит ссылки на социальные сети
+	Описываем оформление и поведение блока, который содержит ссылки на социальные сети
 ----------------------------------------------------*/
 
 .block-social-media {
@@ -89,15 +89,15 @@
 	width: 30px;
 }
 
-.block-social-media__rounded_corners i {
+.block-social-media__rounded-corners i {
 	border-radius: 15px;	
 }
 
-.block-social-media__rounded_corners + .block-social-media__small  i {
-	border-radius: 30px;	
+.block-social-media__rounded-corners.block-social-media__big i {
+	border-radius: 25px;	
 }
 
-.block-social-media__rounded_corners + .block-social-media__small  i {
+.block-social-media__rounded-corners.block-social-media__small i {
 	border-radius: 7px;	
 }
 
@@ -158,7 +158,7 @@
 
 <h2>Квадраты со скруглёнными углами:</h2>
 
-<div class="block-social-media block-social-media__rounded_corners block-social-media__big">
+<div class="block-social-media block-social-media__rounded-corners block-social-media__big">
 	<ul>
 		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
 		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
@@ -170,7 +170,8 @@
 	</ul>
 </div>
 
-<div class="block-social-media block-social-media__rounded_corners">
+
+<div class="block-social-media block-social-media__rounded-corners">
 	<ul>
 		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
 		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
@@ -182,7 +183,7 @@
 	</ul>
 </div>
 
-<div class="block-social-media block-social-media__rounded_corners block-social-media__small">
+<div class="block-social-media block-social-media__rounded-corners block-social-media__small">
 	<ul>
 		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
 		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
