+Серые, с выделением цветом при наведении

--- a/index.html
+++ b/index.html
@@ -105,6 +105,23 @@
 	border-radius: 100px;	
 }
 
+
+.block-social-media__grayscale i {
+	filter: grayscale(100%);
+}
+
+.block-social-media__grayscale i:hover {
+	filter: initial;
+}
+
+.block-social-media__grayscale .block-social-media-dzen i {
+	filter: opacity(50%);
+}
+
+.block-social-media__grayscale .block-social-media-dzen i:hover {
+	filter: initial;
+}
+
 /*----------------------------------------------------
 	Описываем оформление и поведение ссылки
 ----------------------------------------------------*/  
@@ -222,6 +239,82 @@
 </div>
 
 <div class="block-social-media block-social-media__circle block-social-media__small">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
+
+<h2>Серые, с выделением цветом при наведении:</h2>
+
+<div class="block-social-media block-social-media__grayscale block-social-media__big">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
+
+<div class="block-social-media block-social-media__grayscale">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
+
+<div class="block-social-media block-social-media__grayscale block-social-media__small">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
+
+
+
+<div class="block-social-media block-social-media__circle block-social-media__big block-social-media__grayscale">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
+
+<div class="block-social-media block-social-media__circle block-social-media__grayscale">
+	<ul>
+		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-rutube"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>		
+		<li class="block-social-media-vk"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-dzen"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>
+		<li class="block-social-media-ok"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
+		<li class="block-social-media-tg"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
+	</ul>
+</div>
+
+<div class="block-social-media block-social-media__circle block-social-media__small block-social-media__grayscale">
 	<ul>
 		<li class="block-social-media-email"><a href="mailto:#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>	
 		<li class="block-social-media-max"><a href="#" rel="noopener" target="_blank"><i aria-hidden="true"></i></a></li>				
